<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="18dp"
        tools:context=".instructions.InstructionsFragment">

        <TextView
            android:id="@+id/instruction_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instructions"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/instruction_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instructions_detailed"
            android:textSize="20sp" />

        <Button
            android:id="@+id/start_shopping_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_shopping" />
    </LinearLayout>
</layout>
