<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <!--    Using linear layout since UI elements are arranged in a vertical stack, no need to
     do a complex layout for this view -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context=".welcome_screen.WelcomeScreenFragment">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/shoe_store_logo"
            android:src="@drawable/ic_h" />

        <TextView
            android:id="@+id/welcome_greetings_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@android:color/holo_blue_light"
            android:gravity="center_horizontal"
            android:text="@string/welcome_to_hidek_shoes_store"
            android:textSize="24sp" />


        <TextView
            android:id="@+id/discount_msg_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@android:color/holo_orange_light"
            android:gravity="center_horizontal"
            android:text="@string/don_t_miss_the_deals"
            android:textSize="30sp" />

        <Button
            android:id="@+id/read_instructions_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/read_instructions" />

    </LinearLayout>
</layout>
