<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="170dp"
            android:layout_height="170dp"

            android:layout_marginBottom="16dp"
            android:contentDescription="@string/shoe_image_for_reference"
            app:layout_constraintBottom_toTopOf="@+id/shoe_name_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/shoe_name_txt"
            style="@style/shoe_field_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shoe_name"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/shoe_name_editext"
            app:layout_constraintStart_toStartOf="@+id/shoe_name_editext"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/shoe_name_editext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/shoe_company_txt"
            app:layout_constraintStart_toStartOf="@+id/shoe_company_txt"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name_txt"
            tools:text="Shoe name test" />

        <TextView
            android:id="@+id/shoe_company_txt"
            style="@style/shoe_field_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/company"
            app:layout_constraintBottom_toTopOf="@+id/shoe_company_editext"
            app:layout_constraintStart_toStartOf="@+id/shoe_company_editext"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name_editext" />

        <EditText
            android:id="@+id/shoe_company_editext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/shoe_sizes_txt"
            app:layout_constraintStart_toStartOf="@+id/shoe_sizes_txt"
            app:layout_constraintTop_toBottomOf="@+id/shoe_company_txt"
            tools:text="Shoe company name" />

        <TextView
            android:id="@+id/shoe_sizes_txt"
            style="@style/shoe_field_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/available_sizes"
            app:layout_constraintBottom_toTopOf="@+id/shoe_sizes_edittext"
            app:layout_constraintStart_toStartOf="@+id/shoe_sizes_edittext"
            app:layout_constraintTop_toBottomOf="@+id/shoe_company_editext" />

        <EditText
            android:id="@+id/shoe_sizes_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/shoe_description_txt"
            app:layout_constraintStart_toStartOf="@+id/shoe_description_txt"
            app:layout_constraintTop_toBottomOf="@+id/shoe_sizes_txt"
            tools:text="9 10 11 11.5 12" />

        <TextView
            android:id="@+id/shoe_description_txt"
            style="@style/shoe_field_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            app:layout_constraintBottom_toTopOf="@+id/shoe_description_editext"
            app:layout_constraintStart_toStartOf="@+id/shoe_description_editext"
            app:layout_constraintTop_toBottomOf="@+id/shoe_sizes_edittext" />


        <EditText
            android:id="@+id/shoe_description_editext"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="start"
            android:inputType="text"
            android:textAlignment="gravity"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/shoe_cancel_button"
            app:layout_constraintTop_toBottomOf="@+id/shoe_description_txt"
            tools:layout_editor_absoluteX="33dp"
            tools:text="shoe description ..." />

        <Button
            android:id="@+id/shoe_save_button"
            android:layout_width="188dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/shoe_description_editext"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/shoe_cancel_button" />

        <Button
            android:id="@+id/shoe_cancel_button"
            android:layout_width="187dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/shoe_save_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/shoe_description_editext" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>