<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <ImageView
            android:id="@+id/login_shoe_store_logo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/shoe_store_logo"
            app:layout_constraintBottom_toTopOf="@+id/login_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:srcCompat="@drawable/ic_h"
            tools:src="@drawable/ic_h" />

        <EditText
            android:id="@+id/login_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:shadowColor="#5E1919"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/login_password"
            app:layout_constraintEnd_toEndOf="@+id/login_shoe_store_logo"
            app:layout_constraintStart_toStartOf="@+id/login_shoe_store_logo"
            app:layout_constraintTop_toBottomOf="@+id/login_shoe_store_logo" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/login_button"
            app:layout_constraintEnd_toEndOf="@+id/login_username"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/login_username"
            app:layout_constraintTop_toBottomOf="@+id/login_username" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/singup_textview"
            app:layout_constraintEnd_toEndOf="@+id/login_password"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/login_password"
            app:layout_constraintTop_toBottomOf="@+id/login_password" />

        <TextView
            android:id="@+id/singup_textview"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/dont_have_an_account"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/signup_button"
            app:layout_constraintHorizontal_bias="0.5"

            app:layout_constraintStart_toStartOf="parent" />

        <Button

            android:id="@+id/signup_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/singup_textview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/singup_textview"
            app:layout_constraintTop_toTopOf="@+id/singup_textview" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>